Remove padding in footer to fix issue of box overlapping text

--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -3,7 +3,6 @@ footer {
   background-color: #FFFFFF;
   font-family: "Righteous", sans-serif;
   font-size: 35px;
-  padding: 2em;
   position: fixed;
   bottom: 0;
   width: 100%;
